turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:4: error: not found: value i
	while (getCouleurSol!=colors(i)){
                                     ^LangtonsAnt:5: error: not found: value i
		i=i+1
                ^LangtonsAnt:7: error: not found: value i
	if(rule(i)=="L"){
                ^