turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
	
	while (getCouleurSol!=colors(i)){
		i=i+1
	}
	if(rule(i)=="L"){
		setCouleurBrosse(Color.black)
		baisseBrosse
		leveBrosse
		droite
		avance
	}
	else{
		setCouleurBrosse(Color.white)
		baisseBrosse
		leveBrosse
		gauche
		avance	
	}
	
}


